# cpa

./: .gitignore  CMakeLists.txt  VesselCPAExamples.ipynb  modeling_risk_given_cpa.ipynb  package.xml  setup.py  vessel.py
VesselCPAExamples/: VesselCPAExamples.md
nodes/: cpa_node.py
src/cpa/: vessel.py
